# think-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/think_mcp_server/: __init__.py  __main__.py  init.py  prompts.py  resources.py  server.py  templates.py
src/think_mcp_server/config/: .env.template  servers_config.json
src/think_mcp_server/prompts/: prompts-template.md
src/think_mcp_server/resources/: resources-template.md  tool_content_analyzer_prompt.md
src/think_mcp_server/tools/: __init__.py  article_analysis.py  baidu_speech_recognizer.py  content_analyzer.py  speech_to_text.py  video_audio_extractor.py
tests/test_resource/: sample_response.md
tests/think_mcp_server/tools/: run_content_analyzer.py  test_content_analyzer.py
