[project]
name = "think-mcp-server"
version = "0.5.0"
description = "thinkthinking's mcp server"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["mcp", "server", "think", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
 "mcp>=1.3.0",
 "pyyaml>=6.0.2",
 "tiktoken>=0.8.0",
 "pyfiglet>=1.0.2",
 "rich>=13.9.4",
 "openai>=1.3.0",
 "time-machine>=2.13.0",
 "httpx[socks]>=0.28.1",
 "prompt-toolkit>=3.0.43",
 "fastapi>=0.109.0",
 "uvicorn>=0.27.0",
 "think-llm-client>=0.3.7",
 "python-dotenv>=1.0.0",
 "pytest>=8.3.4",
 "pytest-asyncio>=0.25.3",
 "pytest-mock>=3.14.0",
 "websockets>=12.0",
 "urllib3>=2.0.0",
]
[[project.authors]]
name = "zhenjie.ye"
email = "yezhenjie@outlook.de"

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "isort>=5.13.2",
    "mypy>=1.9.0",
    "flake8>=7.0.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "build>=1.2.0",
    "twine>=5.0.0",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project.scripts]
think-mcp-server = "think_mcp_server:main"

[project.urls]
"Homepage" = "https://github.com/thinkthinking/think-mcp-server"
"Bug Tracker" = "https://github.com/thinkthinking/think-mcp-server/issues"
"Documentation" = "https://github.com/thinkthinking/think-mcp-server#readme"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/think_mcp_server"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"